package eu.telecomnancy.flashcards;

import javafx.fxml.FXMLLoader;

public class ControllerLearning
{
    
}