@startuml
title "Diagramme de classe - Flashcards"

class ViewChanger {
    - Learning : View
    - Decks : View
    - Cards : View
    - Deck : View
    - Statistics : View
    - NewCard : View
}

interface Observer{}
abstract Observable{}

class Card{}
class CardList{}
class Deck{}
class DeckList{}

class ViewLearning{} 
class ViewDeckList{}
class ViewCardList{}
class ViewDeckContent{}
class ViewStatistics{}
class ViewNewCard{}

class ControllerLearning{}
class ControllerDecks{}
class ControllerCards{}
class ControllerDeck{}
class ControllerStatistics{}
class ControllerNewCard{}


Observer <|.. ViewChanger

Observer <|.. ViewLearning
Observer <|.. ViewDeckList
Observer <|.. ViewCardList
Observer <|.. ViewDeckContent
Observer <|.. ViewNewCard
Observer <|.. ViewStatistics

Observable <|.. Deck

CardList -- "*" Card
DeckList -- "*" Deck

ControllerLearning -- ViewLearning
ControllerDecks -- ViewDeckList
ControllerCards -- ViewCardList
ControllerDeck -- ViewDeckContent
ControllerStatistics -- ViewStatistics
ControllerNewCard -- ViewNewCard

Card "*" -- "1" Deck
Observable "1" -- "*" Observer

@enduml